--- a/hugo.toml
+++ b/hugo.toml
@@ -6,7 +6,7 @@ baseURL = "https://homakaka.github.io"
 theme = 'hugo-bearblog'
 
 # Basic metadata configuration for your blog.
-title = "Minbok Wi's Blog"
+title = "Minbok Wi"
 author = "Minbok Wi"
 copyright = "Copyright © 2024, Minbok Wi."
 languageCode = "en-US"
@@ -20,6 +20,9 @@ ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
   blog = "/:slug/"
   tags = "/blog/:slug"
+
+[markup]
+  defaultMarkdownHandler = 'goldmark'
 
 [params]
   # The "description" of your website. This is used in the meta data of your generated html.
@@ -38,7 +41,7 @@ ignoreErrors = ["error-disable-taxonomy"]
   # Another "title" :-). This one is used as the site_name on the Hugo's internal
   # opengraph structured data template.
   # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "Minbok Wi's blog"
+  title = "Minbok Wi"
 
   # This theme will, by default, inject a made-with-line at the bottom of the page.
   # You can turn it off, but we would really appreciate if you don’t :-).
