--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
           exteneded: true
 
       - name: Build
-        run: hugo --minify
+        run: hugo -t hugo-bearblog
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
